# peridotcode

./: .env.example  .gitignore  AGENTS.md  ALPHA_RELEASE.md  CHANGELOG.md  Cargo.toml  DEBUGGING.md  LICENSE  MANUAL_TESTING.md  README.md  REVIEW_SUMMARY.md  config.example.toml  fix_file.patch  index.html  now.md  package.json  peridotcode-opencode-prompt-plan.md  test-generation.ps1  test-generation.sh  test_install.patch
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/command_runner/: Cargo.toml  README.md
crates/command_runner/src/: doctor.rs  instructions.rs  lib.rs  run.rs
crates/core/: Cargo.toml  README.md  index.html  package.json
crates/core/examples/: agent_test.rs
crates/core/src/: agent_loop.rs  code_template.rs  context.rs  gateway_integration.rs  inference.rs  intent.rs  lib.rs  main.js  modification_engine.rs  orchestrator.rs  planner.rs  unified_context.rs
crates/core/src/entities/: Player.js
crates/core/src/scenes/: GameScene.js
crates/core/src/unified_context/: conversation.rs  file_loader.rs  input_parser.rs  prompt_builder.rs
crates/core/tests/: integration_tests.rs
crates/fs_engine/: Cargo.toml  README.md
crates/fs_engine/src/: lib.rs  operations.rs  read.rs  safety.rs  summary.rs  write.rs
crates/fs_engine/tests/: integration_test.rs
crates/model_gateway/: Cargo.toml
crates/model_gateway/src/: anthropic.rs  catalog.rs  config.rs  config_file.rs  credentials.rs  groq.rs  inference.rs  lib.rs  model.rs  observability.rs  openai.rs  openrouter.rs  presets.rs  provider.rs
crates/shared/: Cargo.toml
crates/shared/src/: constants.rs  errors.rs  lib.rs  models.rs
crates/skills/: Cargo.toml  README.md
crates/skills/examples/: agent_tool_example.rs
crates/skills/src/: builtins.rs  lib.rs  manifest.rs  orchestrator_example.rs  registry.rs
crates/skills/src/tools/: dispatcher.rs  mod.rs  modify_code.rs  read_file.rs
crates/template_engine/: Cargo.toml
crates/template_engine/src/: lib.rs  registry.rs  renderer.rs  selector.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  overlays.rs  setup.rs  ui.rs
docs/: architecture.md  cleanup-summary.md  configuration.md  end-to-end-flow.md  known-gaps.md  mvp-status.md  mvp.md  openrouter.md  prd.md  tui-setup.md
docs/internal/: QUALITY_REVIEW.md  SETUP_INTEGRATION_SUMMARY.md
examples/phaser-2d-starter/: README.md  index.html
scratch/: repro_config_bug.rs
scripts/: test-alpha.sh
src/: main.js
src/entities/: Player.js
src/scenes/: BootScene.js  GameScene.js
templates/: bevy_2d_minimal.json  macroquad_2d_platformer.json  nodejs_terminal_rpg.json  phaser_2d_starter.json  vanilla_js_arcade_shooter.json  vanilla_js_color_match.json  vanilla_js_platformer.json  vanilla_js_puzzle.json  vanilla_js_shooter.json
templates/phaser-2d-starter/: README.md  package.json  template.toml
templates/phaser-2d-starter/src/: main.js
templates/phaser-2d-starter/src/entities/: Player.js
templates/phaser-2d-starter/src/scenes/: BootScene.js  GameScene.js
tests/e2e/: test_install.sh
