[package]
name = "peridot-command-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local command execution and diagnostics for PeridotCode"

[dependencies]
peridot-shared = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"