[package]
name = "peridot-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Orchestration, planning, and project context for PeridotCode"

[dependencies]
peridot-shared = { workspace = true }
peridot-fs-engine = { workspace = true }
peridot-template-engine = { workspace = true }
peridot-command-runner = { workspace = true }
peridot-skills = { workspace = true }
peridot-model-gateway = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
regex = "1.12.3"
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
wiremock = "0.6"
serde_json = { workspace = true }
