[package]
name = "peridot-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for PeridotCode"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]