[package]
name = "peridot-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Modular skill system for PeridotCode (foundation only)"

[dependencies]
peridot-shared = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]