[package]
name = "peridot-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Modular skill system for PeridotCode (foundation only)"

[dependencies]
peridot-shared = { workspace = true }
peridot-fs-engine = { workspace = true }
peridot-model-gateway = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }