[package]
name = "peridot-template-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Template selection and rendering for PeridotCode"

[dependencies]
peridot-shared = { workspace = true }
peridot-fs-engine = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
include_dir = "0.7.4"

[dev-dependencies]
tempfile = "3.8"
